--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "express": "3.3.4",
     "jade": "*",
-    "restler" : "*",
-    "libxml-to-js": "*"
+    "restler": "*",
+    "xml2js": "*"
   }
 }
