--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node-dev --expose-gc --harmony app.js"
   },
   "dependencies": {
-    "express": "3.3.4",
-    "jade": "*",
-    "restler": "*",
-    "xml2js": "*",
-    "async": "*",
-    "csv": "*"
+    "async": "^1.4.2",
+    "body-parser": "^1.13.3",
+    "csv": "^0.4.6",
+    "debug": "^2.2.0",
+    "express": "^4.13.3",
+    "fast-csv": "^0.6.0",
+    "jade": "^1.11.0",
+    "lodash": "^3.10.1",
+    "morgan": "^1.6.1",
+    "redis.io": "0.0.3",
+    "request": "^2.61.0",
+    "restler": "^3.3.0"
   }
 }
