--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node-dev --expose-gc --harmony app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "async": "^1.4.2",
