--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "express": "^4.13.3",
     "fast-csv": "^0.6.0",
     "jade": "^1.11.0",
+    "kue": "^0.11.6",
     "lodash": "^3.10.1",
     "morgan": "^1.6.1",
-    "redis.io": "0.0.3",
     "request": "^2.61.0",
     "restler": "^3.3.0"
   }
